kubernetes-yaml/mongodeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:4.2.8
          volumeMounts:
            - mountPath: "data/db"
              name: mongoclaim
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "250Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
      volumes:
        - name: mongoclaim
          persistentVolumeClaim:
            claimName: pvc-mongo-lin
