kubernetes-yaml/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
      app: api
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
